--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://gorillatoolkit.org/'
 languageCode = 'en-us'
 title = 'Gorilla web toolkit'
-theme = 'gorillatoolkit'
+theme = 'gorillawebtoolkit'
